All user treatment detail col fix with offfset

--- a/user_admin/listTreatment_detail_paid.html
+++ b/user_admin/listTreatment_detail_paid.html
@@ -323,9 +323,9 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row justify-content-center">
+                            <div class="row">
 
-								<div class="col-lg-8 col-xl-6">
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
@@ -351,135 +351,135 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 								</div>
 
-								<div class="col-lg-8 col-xl-6">
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 
-								<div class="tab-content">
-									<div class="tab-pane active" id="tab-spk" role="tabpanel">
-										<div class="kt-portlet kt-portlet--mobile" id="print-section">
-											<div class="kt-portlet__head centered-content">
-												<div class="kt-portlet__head-label">
-													<h3 class="kt-portlet__head-title">
-														Treatment Details
-													</h3>
+									<div class="tab-content">
+										<div class="tab-pane active" id="tab-spk" role="tabpanel">
+											<div class="kt-portlet kt-portlet--mobile" id="print-section">
+												<div class="kt-portlet__head centered-content">
+													<div class="kt-portlet__head-label">
+														<h3 class="kt-portlet__head-title">
+															Treatment Details
+														</h3>
+													</div>
 												</div>
-											</div>
-											<div class="kt-portlet__body">
-	                                            <div class="row" style="margin-bottom:20px;">
-													<div class="col-6">
-		                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-														<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
-		                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-		                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
-													</div>
-	                                            </div>
-	                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
-	                                                <tr>
-	                                                    <th width="30%">Tanggal</th>
-	                                                    <th width="10%">:</th>
-	                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-	                                                </tr>
-	                                            </table>
-	        									<table class="table table-bordered table-hover table-checkable" id="table_spk_paid"></table>
-												<div class="row" style="margin-top:50px;">
-													<div class="col-6" style="padding-right:0px;">
-														<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
-			                                                <tr>
-			                                                    <th width="35%">Waktu Mulai</th>
-			                                                    <th width="10%">:</th>
-			                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
-			                                                </tr>
-			                                                <tr>
-			                                                    <th>Waktu Selesai</th>
-			                                                    <th>:</th>
-			                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
-			                                                </tr>
-			                                            </table>
-													</div>
-													<div class="col-6" style="padding-left:0px;text-align:right;">
-		                                                <span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
-	    	                                            <span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
-		                                                <span class="kt-font-bold">Complaint :</span>&nbsp;<br>
-	    	                                            <span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
-													</div>
-	                                            </div>
+												<div class="kt-portlet__body">
+		                                            <div class="row" style="margin-bottom:20px;">
+														<div class="col-6">
+			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+															<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
+			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+														</div>
+		                                            </div>
+		                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
+		                                                <tr>
+		                                                    <th width="30%">Tanggal</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+		                                                </tr>
+		                                            </table>
+		        									<table class="table table-bordered table-hover table-checkable" id="table_spk_paid"></table>
+													<div class="row" style="margin-top:50px;">
+														<div class="col-6" style="padding-right:0px;">
+															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+				                                                <tr>
+				                                                    <th width="35%">Waktu Mulai</th>
+				                                                    <th width="10%">:</th>
+				                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+				                                                </tr>
+				                                                <tr>
+				                                                    <th>Waktu Selesai</th>
+				                                                    <th>:</th>
+				                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+				                                                </tr>
+				                                            </table>
+														</div>
+														<div class="col-6" style="padding-left:0px;text-align:right;">
+			                                                <span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
+		    	                                            <span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
+			                                                <span class="kt-font-bold">Complaint :</span>&nbsp;<br>
+		    	                                            <span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
+														</div>
+		                                            </div>
+												</div>
 											</div>
 										</div>
-									</div>
-									<div class="tab-pane" id="tab-invoice" role="tabpanel">
-										<div class="kt-portlet kt-portlet--mobile" id="print-section">
-											<div class="kt-portlet__head centered-content">
-												<div class="kt-portlet__head-label">
-													<h3 class="kt-portlet__head-title">
-														Treatment Details
-													</h3>
-												</div>
-											</div>
-											<div class="kt-portlet__body">
-	                                            <div class="row" style="margin-bottom:20px;">
-													<div class="col-6">
-		                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
-														<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
-		                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
-		                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+										<div class="tab-pane" id="tab-invoice" role="tabpanel">
+											<div class="kt-portlet kt-portlet--mobile" id="print-section">
+												<div class="kt-portlet__head centered-content">
+													<div class="kt-portlet__head-label">
+														<h3 class="kt-portlet__head-title">
+															Treatment Details
+														</h3>
 													</div>
-													<div class="col-6">
-														<div class="row">
-															<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
-															</div>
-															<div class="col-12" style="text-align: right; margin-bottom:5px;">
-																<button class="col-5 btn btn-brand no-print">Foto</button>
-															</div>
-															<div class="col-12" style="text-align: right;">
-																<button class="col-5 btn btn-danger no-print" data-toggle="modal" data-target="#kt_modal_treatment_complaint">Complaint</button>
+												</div>
+												<div class="kt-portlet__body">
+		                                            <div class="row" style="margin-bottom:20px;">
+														<div class="col-6">
+			                                                <h5 class="color-main-dark" name="nomor_pesanan">#123456</h5>
+															<a href="user_admin/customer_detail.html"><span class="kt-font-bold" name="customer_nama">Darnilla</span></a>&nbsp;<br>
+			                                                <span class="kt-font-bold" name="customer_nohp">081342497228</span>&nbsp;<br>
+			                                                <span class="kt-font-bold" name="customer_alamat">Jl. Areopala 6</span>&nbsp;<br>
+														</div>
+														<div class="col-6">
+															<div class="row">
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-warning no-print" onclick="printFunction()">Print</button>
+																</div>
+																<div class="col-12" style="text-align: right; margin-bottom:5px;">
+																	<button class="col-5 btn btn-brand no-print">Foto</button>
+																</div>
+																<div class="col-12" style="text-align: right;">
+																	<button class="col-5 btn btn-danger no-print" data-toggle="modal" data-target="#kt_modal_treatment_complaint">Complaint</button>
+																</div>
 															</div>
 														</div>
-													</div>
-	                                            </div>
-	                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
-	                                                <tr>
-	                                                    <th width="30%">Tanggal</th>
-	                                                    <th width="10%">:</th>
-	                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
-	                                                </tr>
-	                                            </table>
-	        									<table class="table table-bordered table-hover table-checkable" id="table_invoice"></table>
-	                                            <div class="col-12 justify-end" style="padding: 0px 0px">
-	                                                <div style="text-align:right;width:50%">
-	                                                    <span class="kt-font-bold">Sub-Total :</span>&nbsp;
-	    	                                            <span name="price_subTotal">Rp 550.000,00</span>&nbsp;<br>
-	                                                    <span class="kt-font-bold">Diskon :</span>&nbsp;
-	    	                                            <span name="price_diskon">Rp 50.000,00</span>&nbsp;<br>
-	                                                    <span class="kt-font-bold">Total :</span>&nbsp;
-	    	                                            <span name="price_total">Rp 500.000,00</span>&nbsp;
-	                                                </div>
-	                                            </div>
-												<div class="row" style="margin-top:50px;">
-													<div class="col-6" style="padding-right:0px;">
-														<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
-			                                                <tr>
-			                                                    <th width="35%">Waktu Mulai</th>
-			                                                    <th width="10%">:</th>
-			                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
-			                                                </tr>
-			                                                <tr>
-			                                                    <th>Waktu Selesai</th>
-			                                                    <th>:</th>
-			                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
-			                                                </tr>
-			                                            </table>
-													</div>
-													<div class="col-6" style="padding-left:0px;text-align:right;">
-		                                                <span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
-	    	                                            <span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
-		                                                <span class="kt-font-bold">Complaint :</span>&nbsp;<br>
-	    	                                            <span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
-													</div>
-	                                            </div>
+		                                            </div>
+		                                            <table class="col-sm-12 col-md-8 col-lg-6" style="margin-bottom:50px">
+		                                                <tr>
+		                                                    <th width="30%">Tanggal</th>
+		                                                    <th width="10%">:</th>
+		                                                    <th width="60%"style="font-weight:500;" name="treatment_hari">2 Oktober 2019</th>
+		                                                </tr>
+		                                            </table>
+		        									<table class="table table-bordered table-hover table-checkable" id="table_invoice"></table>
+		                                            <div class="col-12 justify-end" style="padding: 0px 0px">
+		                                                <div style="text-align:right;width:50%">
+		                                                    <span class="kt-font-bold">Sub-Total :</span>&nbsp;
+		    	                                            <span name="price_subTotal">Rp 550.000,00</span>&nbsp;<br>
+		                                                    <span class="kt-font-bold">Diskon :</span>&nbsp;
+		    	                                            <span name="price_diskon">Rp 50.000,00</span>&nbsp;<br>
+		                                                    <span class="kt-font-bold">Total :</span>&nbsp;
+		    	                                            <span name="price_total">Rp 500.000,00</span>&nbsp;
+		                                                </div>
+		                                            </div>
+													<div class="row" style="margin-top:50px;">
+														<div class="col-6" style="padding-right:0px;">
+															<table class="col-sm-24 col-md-16 col-lg-12" style="bottom: 0px; position: absolute;">
+				                                                <tr>
+				                                                    <th width="35%">Waktu Mulai</th>
+				                                                    <th width="10%">:</th>
+				                                                    <th width="55%"style="font-weight:500;" name="waktu_mulai">08.00 WITA</th>
+				                                                </tr>
+				                                                <tr>
+				                                                    <th>Waktu Selesai</th>
+				                                                    <th>:</th>
+				                                                    <th style="font-weight:500;" name="waktu-selesai">10.00 WITA</th>
+				                                                </tr>
+				                                            </table>
+														</div>
+														<div class="col-6" style="padding-left:0px;text-align:right;">
+			                                                <span class="kt-font-bold">Tipe Complaint :</span>&nbsp;<br>
+		    	                                            <span name="complaint_tipe">Eyelash Extension</span>&nbsp;<br>
+			                                                <span class="kt-font-bold">Complaint :</span>&nbsp;<br>
+		    	                                            <span name="complaint_text" style="word-wrap: break-word">nama saya fiqar aprialim, saya tidak terima dengan treatment yang diberikan untuk kuku dan bulu mata saya</span>&nbsp;<br>
+														</div>
+		                                            </div>
+												</div>
 											</div>
 										</div>
 									</div>
-								</div>
 
 								</div>
 
