--- a/user_therapist/treatment_detail_ongoing.html
+++ b/user_therapist/treatment_detail_ongoing.html
@@ -297,9 +297,9 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
 						<div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-							<div class="row justify-content-center">
+							<div class="row">
 
-								<div class="col-lg-8 col-xl-6">
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 
 									<!--begin::Portlet-->
 									<div class="kt-portlet kt-portlet--mobile">
