--- a/user_superadmin/treatment_detail_waiting.html
+++ b/user_superadmin/treatment_detail_waiting.html
@@ -344,9 +344,9 @@ License: You must have a valid license purchased only from themeforest(the above
 						<!-- begin:: Content -->
                         <div class="kt-container  kt-container--fluid  kt-grid__item kt-grid__item--fluid">
 
-                            <div class="row justify-content-center">
+                            <div class="row">
 
-								<div class="col-lg-8 col-xl-6">
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head">
 											<div class="kt-portlet__head-label">
@@ -367,7 +367,7 @@ License: You must have a valid license purchased only from themeforest(the above
 									</div>
 								</div>
 
-								<div class="col-lg-8 col-xl-6">
+								<div class="col-lg-8 col-xl-6 offset-lg-2 offset-xl-3">
 									<div class="kt-portlet kt-portlet--mobile">
 										<div class="kt-portlet__head centered-content">
 											<div class="kt-portlet__head-label">
