--- a/user_therapist/inventory_request_new.html
+++ b/user_therapist/inventory_request_new.html
@@ -319,58 +319,66 @@ License: You must have a valid license purchased only from themeforest(the above
 										</div>
 										<div class="kt-portlet__body">
 											<form id="kt_form_request_barang">
-												<table class="table table-bordered table-hover well-align-table" role="grid">
-	                                                <thead>
-	                                                    <tr role="row">
-	                                                        <th style="width: 5%">No</th>
-	                                                        <th style="width: 15%">Alat/Bahan</th>
-	                                                        <th style="width: 25%">Barang</th>
-	                                                        <th style="width: 15%">Satuan</th>
-	                                                        <th style="width: 12.5%">Request</th>
-	                                                        <th style="width: 12.5%">Disetujui</th>
-	                                                        <th style="width: 15%">Upload Foto</th>
-	                                                    </tr>
-	                                                </thead>
-	                                                <tbody id="item_list">
-	                                                    <tr role="row">
-	                                                        <td>1</td>
-	                                                        <td class="text-center">
-	                                                            <select class="form-control request_required" name="request_type1" required>
-	        														<option>Alat</option>
-	        														<option>Bahan</option>
-	        													</select>
-	                                                        </td>
-															<td class="text-center">
-	                                                            <select class="form-control request_required" name="request_barang1" >
-	        														<option>Eyelash Size 12</option>
-	        														<option>Eyelash Size 12</option>
-	        														<option>Eyelash Size 12</option>
-	        													</select>
-	                                                        </td>
-															<td class="text-center">
-	                                                            <select class="form-control request_required" name="request_satuan1" >
-	        														<option>Box</option>
-	        														<option>Box</option>
-	        														<option>Box</option>
-	        													</select>
-	                                                        </td>
-	                                                        <td class="text-center">
-	                                                            <input type="number" class="form-control request_required" name="request_jumlah_request1" placeholder="Jumlah" >
-	                                                        </td>
-	                                                        <td class="text-center">
-	                                                            <input type="number" class="form-control request_required" name="request_jumlah_disetujui1" placeholder="Jumlah" >
-	                                                        </td>
-	                                                        <td class="text-center">
-	                                                            <input class="kt-hidden request_required" type="file" accept="image/*" id="request_foto1" name="request_foto1" >
-	                                                            <label for="request_foto1" class="btn btn-link" style="padding:0px;"><i class="flaticon2-photo-camera"></i>Foto</label>
-	                                                        </td>
-	                                                    </tr>
-	                                                </tbody>
-	                                            </table>
-	                                            <div style="text-align:center;">
+												<label style="font-size: 1rem;font-weight: 400;">Item List : </label>
+												<div class="table-responsive">
+													<table class="table table-bordered table-hover well-align-table table-mobile" role="grid" id="table_request_inventory_new">
+		                                                <thead>
+		                                                    <tr role="row">
+		                                                        <th style="width: 5%">No</th>
+		                                                        <th style="width: 15%">Alat/Bahan</th>
+		                                                        <th style="width: 25%">Barang</th>
+		                                                        <th style="width: 15%">Satuan</th>
+		                                                        <th style="width: 12.5%">Request</th>
+		                                                        <th style="width: 12.5%">Disetujui</th>
+		                                                        <th style="width: 15%">Upload Foto</th>
+		                                                    </tr>
+		                                                </thead>
+		                                                <tbody id="item_list">
+		                                                    <tr role="row">
+		                                                        <td>1</td>
+		                                                        <td class="text-center">
+		                                                            <select class="form-control request_required" name="request_type1" required>
+		        														<option>Alat</option>
+		        														<option>Bahan</option>
+		        													</select>
+		                                                        </td>
+																<td class="text-center">
+		                                                            <select class="form-control request_required" name="request_barang1" >
+		        														<option>Eyelash Size 12</option>
+		        														<option>Eyelash Size 12</option>
+		        														<option>Eyelash Size 12</option>
+		        													</select>
+		                                                        </td>
+																<td class="text-center">
+		                                                            <select class="form-control request_required" name="request_satuan1" >
+		        														<option>Box</option>
+		        														<option>Box</option>
+		        														<option>Box</option>
+		        													</select>
+		                                                        </td>
+		                                                        <td class="text-center">
+		                                                            <input type="number" min="1" class="form-control request_required" name="request_jumlah_request1" placeholder="Jumlah" >
+		                                                        </td>
+		                                                        <td class="text-center">
+		                                                            <input type="number" min="1" class="form-control request_required" name="request_jumlah_disetujui1" placeholder="Jumlah" >
+		                                                        </td>
+		                                                        <td class="text-center">
+		                                                            <input class="kt-hidden request_required" type="file" accept="image/*" id="request_foto1" name="request_foto1" >
+		                                                            <label for="request_foto1" class="btn btn-link" style="padding:0px;" id="request_foto1-label"><i class="flaticon2-photo-camera"></i>Foto</label>
+																	<span class="form-text text-muted kt-hidden"></span>
+		                                                        </td>
+		                                                    </tr>
+		                                                </tbody>
+		                                            </table>
+												</div>
+	                                            <div class="kt-margin-b-10" style="text-align:center;">
 	                                                <button type="button" class="btn btn-link" style="padding:0px;" id="item_add"><i class="flaticon-add"></i>Tambah Item</button>
 	                                            </div>
-	                                            <div style="text-align: center; margin-top: 50px">
+												<div class="form-group form-group-last">
+													<label for="request_notes">Notes: </label>
+													<textarea class="form-control" id="request_notes" name="request_notes" rows="3" placeholder="Notes"></textarea>
+												</div>
+	                                            <div style="text-align: center; margin-top: 30px">
 	                                                <button type="submit" class="btn btn-success" id="kt_sweetalert_request_berhasil">Submit</button>
 	                                            </div>
 											</form>
@@ -496,7 +504,8 @@ License: You must have a valid license purchased only from themeforest(the above
                         </td>
                         <td class="text-center">
                             <input class="kt-hidden request_required" name="request_foto`+ i +`" type="file" accept="image/*" id="request_foto`+ i +`" >
-                            <label for="request_foto`+ i +`"  class="btn btn-link" style="padding:0px;"><i class="flaticon2-photo-camera"></i>Foto</label>
+                            <label for="request_foto`+ i +`"  class="btn btn-link" style="padding:0px;" id="request_foto`+ i +`-label"><i class="flaticon2-photo-camera"></i>Foto</label>
+							<span class="form-text text-muted kt-hidden"></span>
                         </td>
                     </tr>`
 				);
@@ -526,7 +535,27 @@ License: You must have a valid license purchased only from themeforest(the above
 				event.preventDefault();
 			})
 
-			$('#kt_form_request_barang').validate({})
+			$('#kt_form_request_barang').validate({
+				rules: {
+					request_notes: {
+						required: true
+					}
+				}
+			})
+
+			$(document).on('change', '.request_required', function() {
+				$(this).removeClass('is-invalid');
+				var input_id = $(this).attr('id')
+				var error_msg_id = '#' + input_id + '-error';
+				$(error_msg_id).empty();
+				var label_id = '#' + input_id + '-label';
+				$(label_id).append(`<svg style="margin-left: 8px;" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="24px" height="24px" viewBox="0 0 24 24" version="1.1" class="kt-svg-icon">
+				    <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd">
+				        <polygon points="0 0 24 0 24 24 0 24"/>
+				        <path style="fill: #0abb87" d="M6.26193932,17.6476484 C5.90425297,18.0684559 5.27315905,18.1196257 4.85235158,17.7619393 C4.43154411,17.404253 4.38037434,16.773159 4.73806068,16.3523516 L13.2380607,6.35235158 C13.6013618,5.92493855 14.2451015,5.87991302 14.6643638,6.25259068 L19.1643638,10.2525907 C19.5771466,10.6195087 19.6143273,11.2515811 19.2474093,11.6643638 C18.8804913,12.0771466 18.2484189,12.1143273 17.8356362,11.7474093 L14.0997854,8.42665306 L6.26193932,17.6476484 Z" fill="#000000" fill-rule="nonzero" transform="translate(11.999995, 12.000002) rotate(-180.000000) translate(-11.999995, -12.000002) "/>
+				    </g>
+				</svg>`);
+			})
 
         </script>
 
