--- a/user_therapist/inventory_request_new.html
+++ b/user_therapist/inventory_request_new.html
@@ -325,7 +325,7 @@ License: You must have a valid license purchased only from themeforest(the above
 		                                                <thead>
 		                                                    <tr role="row">
 		                                                        <th style="width: 5%">No</th>
-		                                                        <th style="width: 15%">Alat/Bahan</th>
+		                                                        <th style="width: 15%">Jenis</th>
 		                                                        <th style="width: 25%">Barang</th>
 		                                                        <th style="width: 15%">Satuan</th>
 		                                                        <th style="width: 12.5%">Request</th>
@@ -443,12 +443,14 @@ License: You must have a valid license purchased only from themeforest(the above
                         <td>`+ i +`</td>
                         <td class="text-center">
                             <select name="request_type`+ i +`" class="form-control request_required">
+                                <option value="" selected disabled>Jenis</option>
                                 <option>Alat</option>
                                 <option>Bahan</option>
                             </select>
                         </td>
                         <td class="text-center">
                             <select name="request_barang`+ i +`" class="form-control request_required" >
+                                <option value="" selected disabled>Barang</option>
                                 <option>Eyelash Size 12</option>
                                 <option>Eyelash Size 12</option>
                                 <option>Eyelash Size 12</option>
@@ -456,6 +458,7 @@ License: You must have a valid license purchased only from themeforest(the above
                         </td>
                         <td class="text-center">
                             <select name="request_satuan`+ i +`" class="form-control request_required" >
+                                <option value="" selected disabled>Satuan</option>
                                 <option>Box</option>
                                 <option>Box</option>
                                 <option>Box</option>
@@ -475,9 +478,10 @@ License: You must have a valid license purchased only from themeforest(the above
 				);
 				i++;
 			});
+
 			$('document').ready(function () {
 				$('#item_add').click();
-			})
+			});
 
             // Sweetalert
             $('#kt_sweetalert_request_berhasil').click(function(e) {
@@ -500,7 +504,7 @@ License: You must have a valid license purchased only from themeforest(the above
 					})
 				});
 				event.preventDefault();
-			})
+			});
 
 			jQuery.extend(jQuery.validator.messages, {
 			    required : "Required"
@@ -517,7 +521,7 @@ License: You must have a valid license purchased only from themeforest(the above
 						required: "This field is required"
 					}
 				}
-			})
+			});
 
 			$(document).on('change', '.request_required', function() {
 				$(this).removeClass('is-invalid');
@@ -531,7 +535,7 @@ License: You must have a valid license purchased only from themeforest(the above
 				        <path style="fill: #0abb87" d="M6.26193932,17.6476484 C5.90425297,18.0684559 5.27315905,18.1196257 4.85235158,17.7619393 C4.43154411,17.404253 4.38037434,16.773159 4.73806068,16.3523516 L13.2380607,6.35235158 C13.6013618,5.92493855 14.2451015,5.87991302 14.6643638,6.25259068 L19.1643638,10.2525907 C19.5771466,10.6195087 19.6143273,11.2515811 19.2474093,11.6643638 C18.8804913,12.0771466 18.2484189,12.1143273 17.8356362,11.7474093 L14.0997854,8.42665306 L6.26193932,17.6476484 Z" fill="#000000" fill-rule="nonzero" transform="translate(11.999995, 12.000002) rotate(-180.000000) translate(-11.999995, -12.000002) "/>
 				    </g>
 				</svg>`);
-			})
+			});
 
         </script>
 
